packages/babylon/test/fixtures/esprima/invalid-syntax/.migrated_0165/actual.js
var source = '\\u0000';
